1.9.2:

2009-02-24  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtable.cc: on_size_allocate(): Change an 
	accidental += to the = that it should be, to stop columns getting 
	increasingly large amounts of extra width when there are >2 columns.
	Bug #539369 (maximiliano)

2009-02-24  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool_backends/postgres_central.cc (set_host):
	Only reset m_port to zero if m_try_other_ports is true. Otherwise, a
	specific port has already been set by the user.
	(connect): Compare m_port to 0, not port, which is a Glib::ustring.
	This fixes a warning about g_utf8_collate's argument being NULL, and
	fixes connection to a remote postgres server advertized via networked
	glom.

2009-02-24  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool_backends/backend.h:
	* glom/libglom/connectionpool_backends/backend.cc: Moved the
	ConnectionPool backend base class into a new file in the
	connectionpool_backends subdirectory.

	* glom/libglom/connectionpool_backends/Makefile.am: Add it to the
	build.

	* glom/libglom/connectionpool_backends/postgres.h:
	* glom/libglom/connectionpool_backends/sqlite.h:
	* glom/libglom/connectionpool_backends/sqlite.cc:
	* glom/libglom/connectionpool.h:
	* glom/libglom/connectionpool.cc:
	* glom/libglom/test_connectionpool.cc:
	* glom/dialog_connection.cc:
	* glom/frame_glom.cc: Adapt.

2009-02-24  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool.h:
	* glom/libglom/connectionpool.cc: Added a get_string_find_operator()
	virtual method to ConnectionPoolBackend, and a similar method to
	ConnectionPool which simply queries its backend.

	* glom/libglom/connectionpool_backends/sqlite.h:
	* glom/libglom/connectionpool_backends/postgres.h: Implement the new
	virtual method appropriately.

	* glom/libglom/data_structure/field.cc (sql_find_operator): Use the
	get_string_find_operator() method of the connectionpool backend in